Updated project without modules